--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,20 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ORINOCO | Caméras Vintages</title>
+    <meta name="title" content="ORINOCO | Caméras Vintages">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 minimal-ui">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" sizes="64x64" href="images/icon.png">
+    <link rel="manifest" href="site.webmanifest">
+    <!--  <link rel="icon" sizes="16x16 32x32 64x64"
+        href="https://www.lydianeautourdumonde.com/app/themes/baserock/assets/ico/favicon.ico"> -->
+    <meta name="msapplication-TileColor" content="#3bafda">
+    <meta name="description"
+        content="Lydiane autour du monde c’est des informations pratiques de voyage, des photos, une boutique en ligne, une émission de télévision, des livres et bien plus!">
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
+    </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
+        integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js"
+        integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous">
+    </script>
+    <script src="https://kit.fontawesome.com/43b52705fd.js" crossorigin="anonymous"></script>
 </head>
 
 
 <body>
-    <h1 class="fs-5">Salut!! </h1>
+    <div class="wrapper">
+
+        <header>
+            <div class="logo">
+                <a href="images/Capture.png">
+                    <img src="images/Capture.png" alt="logo Orinoco">
+                </a>
+            </div>
+            <nav class="navbar" role="group" aria-label="Button group with nested dropdown">
+                <button id="btnGroupDrop1" type="button" class="btn btn-group"> <a href="liste_produit.html">Liste des
+                        produits</button></a>
+                <button id="btnGroupDrop1" type="button" class="btn btn-group"><a href="liste_produit.html">Meilleure
+                        vente</button></a>
+                <button id="btnGroupDrop1" type="button" class="btn btn-group"><a
+                        href="liste_produit.html">Accessoires</button></a>
+            </nav>
+            <div class="find">
+                <input class="search-input" type="text" placeholder="Recherche">
+                <i class="fas fa-search"></i>
+                <i class="fas fa-shopping-basket"><a href="panier.html"></a></i>
+            </div>
+        </header>
+
+        <main class="content">
+            <img src="images/appareil2.png" alt="Photo_aparat"><a href="images/appareil2.png"></a>
+            <div class="hero_inner">
+                <div class="page-width text-center">
+                    <h1>Cameras</h1>
+                    <h2>testé et approuvé</h2>
+                    <a href="liste_produit.html"><input class="shop" type="button" value="Acheter"></a>
+                </div>
+            </div>
+        </main>
+
+
+        <footer>
+            <div class="info">
+                <ul>
+                    <li><i class="fas fa-map-marker-alt"></i> 21 Rue de Paris, Paris, France</li>
+                    <li><i class="fas fa-phone-alt"></i> +1 555 555 555</li>
+                    <li><i class="fas fa-envelope"></i> <a href="support@company.com"> support@company.com</a></li>
+                </ul>
+                <div class="reseaux">
+                    <i class="fab fa-facebook-square"></i> <i class="fab fa-twitter-square"></i> <i
+                        class="fab fa-linkedin"></i> <i class="fab fa-github-square"></i>
+                </div>
+            </div>
+        </footer>
+
+    </div>
 </body>
+
 </html>
