--- a/frontend/liste_produit.html
+++ b/frontend/liste_produit.html
@@ -50,7 +50,7 @@
       <div class="find">
         <input class="search-input" type="text" placeholder="Recherche">
         <i class="fas fa-search"></i>
-        <i class="fas fa-shopping-basket"></i>
+        <a href="panier.html"> <i class="fas fa-shopping-basket"></i></a>
       </div>
     </header>
 
