--- a/frontend/panier.html
+++ b/frontend/panier.html
@@ -49,7 +49,7 @@
             </div>
 
             <div class="find">
-                <i class="fas fa-shopping-basket"></i>
+                <a href="panier.html"> <i class="fas fa-shopping-basket"></i></a>
             </div>
         </header>
 
