--- a/frontend/produit.html
+++ b/frontend/produit.html
@@ -48,7 +48,7 @@
                 <a href="liste_produit.html"><i class="fas fa-arrow-left"></i> La liste des produits</a>
             </div>
             <div class="find">
-                <i class="fas fa-shopping-basket"></i>
+                <a href="panier.html"> <i class="fas fa-shopping-basket"></i></a>
             </div>
         </header>
 
