--- a/frontend/index.html
+++ b/frontend/index.html
@@ -55,7 +55,7 @@
             <div class="find">
                 <input class="search-input" type="text" placeholder="Recherche">
                 <i class="fas fa-search"></i>
-                <i class="fas fa-shopping-basket"><a href="panier.html"></a></i>
+                <a href="panier.html"> <i class="fas fa-shopping-basket"></i></a>
             </div>
         </header>
 
