--- a/frontend/produit.html
+++ b/frontend/produit.html
@@ -11,7 +11,6 @@
 
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" sizes="64x64" href="images/icon.png">
-    <link rel="manifest" href="site.webmanifest">
     <!--  <link rel="icon" sizes="16x16 32x32 64x64"
         href="https://www.lydianeautourdumonde.com/app/themes/baserock/assets/ico/favicon.ico"> -->
     <meta name="msapplication-TileColor" content="#3bafda">
@@ -32,6 +31,11 @@
         integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous">
     </script>
     <script src="https://kit.fontawesome.com/43b52705fd.js" crossorigin="anonymous"></script>
+
+    <script type="module">
+        import {detailProduit} from './js/produit.js';
+        window.onload = detailProduit;
+    </script>
 </head>
 
 
@@ -40,20 +44,50 @@
 
         <header>
             <div class="logo">
-                <a href="images/Capture.png">
+                <a href="index.html">
                     <img src="images/Capture.png" alt="logo Orinoco">
                 </a>
             </div>
-            <div class="back">
-                <a href="liste_produit.html"><i class="fas fa-arrow-left"></i> La liste des produits</a>
-            </div>
+
             <div class="find">
                 <a href="panier.html"> <i class="fas fa-shopping-basket"></i></a>
             </div>
+
+
+
+            <div class="dropdown">
+                <div id="cart">
+                    <p><span id="in-cart-items-num">0</span> Articles</p>
+                </div>
+            
+                <ul id="cart-dropdown" hidden>
+                    <li id="empty-cart-msg"><a>Votre panier est vide</a></li>
+                    <li class="go-to-cart hidden"><a href="panier.html">Voir le panier</a></li>
+                </ul>
+            </div> 
+
         </header>
 
         <main class="content">
-           <h1>Description du produit</p>
+            <h1>Description du produit</p>
+
+                <div id="produit"></div>
+
+                <select class="form-select form-select-sm" aria-label=".form-select-sm example">
+                    <option selected>Sellection des lentilles</option>
+                    <option value="1">35mm 1.4</option>
+                    <option value="2">50mm 1.6</option>
+                    <option value="3">Three</option>
+                </select>
+                <div class="ajout_panier">
+                    <label for="q">Quantité: </label>
+                    <select id="qt" name="q">
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                    </select>
+                    <button type="button" class="add-to-cart">Ajouter au panier</button>
+                </div>
         </main>
 
 
