--- a/frontend/recap_comande.html
+++ b/frontend/recap_comande.html
@@ -8,16 +8,13 @@
     <title>ORINOCO | Produits</title>
     <meta name="title" content="ORINOCO | Caméras Vintages">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 minimal-ui">
-
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" sizes="64x64" href="images/icon.png">
-    <link rel="manifest" href="site.webmanifest">
     <!--  <link rel="icon" sizes="16x16 32x32 64x64"
         href="https://www.lydianeautourdumonde.com/app/themes/baserock/assets/ico/favicon.ico"> -->
     <meta name="msapplication-TileColor" content="#3bafda">
     <meta name="description"
         content="Lydiane autour du monde c’est des informations pratiques de voyage, des photos, une boutique en ligne, une émission de télévision, des livres et bien plus!">
-
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
@@ -40,7 +37,7 @@
 
         <header>
             <div class="logo">
-                <a href="images/Capture.png">
+                <a href="index.html">
                     <img src="images/Capture.png" alt="logo Orinoco">
                 </a>
             </div>
@@ -48,13 +45,12 @@
                 <a href="index.html"><i class="fas fa-arrow-left"></i>Accueil</a>
             </div>
             <div class="find">
-                <i class="fas fa-search"></i>
                 <i class="fas fa-shopping-basket"></i>
             </div>
         </header>
 
         <main class="content">
-
+            <button id="confirm-command">Passer la commande</button>
         </main>
 
         <footer>
