recuperation des produit du local storage

--- a/frontend/produit.html
+++ b/frontend/produit.html
@@ -44,14 +44,15 @@
 
         <header>
             <div class="logo">
-                <a href="index.html">
-                    <img src="images/Capture.png" alt="logo Orinoco">
-                </a>
+              <a href="index.html">
+                <img src="images/Capture.png" alt="logo Orinoco">
+              </a>
             </div>
-
+      
             <div class="find">
-                <a href="panier.html"> <i class="fas fa-shopping-basket"></i></a>
+              <a href="panier.html"> <i class="fas fa-shopping-basket"></i></a>
             </div>
+          </header>
 
 
 
