--- a/frontend/index.html
+++ b/frontend/index.html
@@ -41,14 +41,21 @@
 </head>
 
 
+
 <body>
     <div class="wrapper">
-        <nav class="navbar navbar-expand bg-dark">
-            <a class="navbar-brand" href="index.html"><img src="images/Capture.png" alt="logo Orinoco"></a>
-            <div class="find">
-                <a href="panier.html"> <i class="fas fa-shopping-basket"></i></a>
-            </div>
-        </nav>
+  
+      <header>
+        <div class="logo">
+          <a href="index.html">
+            <img src="images/Capture.png" alt="logo Orinoco">
+          </a>
+        </div>
+  
+        <div class="find">
+          <a href="panier.html"> <i class="fas fa-shopping-basket"></i>Mon panier</a>
+        </div>
+      </header>
 
 
         <div class="jumbotron">
