--- a/frontend/produit.html
+++ b/frontend/produit.html
@@ -50,17 +50,13 @@
             </div>
       
             <div class="find">
-              <a href="panier.html"> <i class="fas fa-shopping-basket"></i></a>
+              <a href="panier.html"> <i class="fas fa-shopping-basket"></i>Mon panier</a>
             </div>
           </header>
 
 
 
             <div class="dropdown">
-                <div id="cart">
-                    <p><span id="in-cart-items-num">0</span> Articles</p>
-                </div>
-            
                 <ul id="cart-dropdown" hidden>
                     <li id="empty-cart-msg"><a>Votre panier est vide</a></li>
                     <li class="go-to-cart hidden"><a href="panier.html">Voir le panier</a></li>
