--- a/frontend/recap_comande.html
+++ b/frontend/recap_comande.html
@@ -11,8 +11,6 @@
 
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" sizes="64x64" href="images/icon.png">
-    <!--  <link rel="icon" sizes="16x16 32x32 64x64"
-        href="https://www.lydianeautourdumonde.com/app/themes/baserock/assets/ico/favicon.ico"> -->
     <meta name="msapplication-TileColor" content="#3bafda">
     <meta name="description"
         content="Lydiane autour du monde c’est des informations pratiques de voyage, des photos, une boutique en ligne, une émission de télévision, des livres et bien plus!">
@@ -31,6 +29,9 @@
         integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous">
     </script>
     <script src="https://kit.fontawesome.com/43b52705fd.js" crossorigin="anonymous"></script>
+
+    <script src='./js/recap_comande.js' defer></script>
+
 </head>
 
 
@@ -43,10 +44,53 @@
                     <img src="images/Capture.png" alt="logo Orinoco">
                 </a>
             </div>
+
+            <div class="find">
+                <a href="panier.html"> <i class="fas fa-shopping-basket"></i>Mon panier</a>
+            </div>
+        </header>
         </header>
 
         <main class="content">
-           
+            <template id="template_recap">
+                <tr>
+                    <td scope="col" id="nr"></td>
+                    <td><img scope="col" id="imgProduit" height="" width="150"></img></td>
+                    <td scope="col" id="nameProduit"></td>
+                    <td scope="col" id="qt"></td>
+                    <td scope="col"id="sous_total"></td>
+                </tr>
+            </template>
+
+            <div class="recap">
+                <p>Voici votre comande: </p>
+            </div>
+
+            <div>
+                <table class="table table-bordered">
+                    <thead>
+                        <tr>
+                            <th scope="col"></th>
+                            <th scope="col"></th>
+                            <th scope="col">Produit</th>
+                            <th scope="col">Quantité</th>
+                            <th scope="col">Prix total</th>
+                        </tr>
+                    </thead>
+                    <tbody id="recap">
+                    </tbody>
+                    <tfoot>
+                        <tr>
+                            <td id="totalLabel" colspan="4">Total : </td>
+                            <td id="total" colspan="2"></td>
+                        </tr>
+                    </tfoot>
+                </table>
+            </div>
+            <div class="card-body">
+                <input id="bouton_validate" type="button" class="btn btn-primary" value="Acheter"
+                    onclick="validateComande()">
+            </div>
         </main>
 
 
