--- a/frontend/recap_comande.html
+++ b/frontend/recap_comande.html
@@ -62,7 +62,7 @@
                 </tr>
             </template>
 
-            <div class="recap">
+            <div class="recapitulation">
                 <p>Voici votre comande: </p>
             </div>
 
