--- a/frontend/panier.html
+++ b/frontend/panier.html
@@ -58,34 +58,35 @@
       </div>
 
       <div>
-        <table class="table table-bordered">
+        <table class="table-bordered table table-danger table-striped">
           <thead>
             <tr>
               <th scope="col"></th>
               <th scope="col"></th>
-              <th scope="col">Produit</th>
+              <th scope="col">Produit / Modèle</th>
               <th scope="col">Quantité</th>
-              <th scope="col">Prix/unité</th>
-              <th scope="col">Prix/sous-total</th>
+              <th scope="col">Prix par unité  / €</th>
+              <th scope="col">Prix sous-total / €</th>
               <th></th>
             </tr>
           </thead>
           <tbody id="listProducts">
             <template id="template_list">
               <tr>
-                  <td scope="col" id="nr"></td>
-                  <td><img scope="col" id="imgProduit" height="" width="150"></img></td>
-                  <td scope="col" id="nameProduit"></td>
-                  <td scope="col" id="qt"></td>
-                  <td scope="col" id="priceProduit"></td>
-                  <td scope="col"id="sous_total"></td>
+                <td scope="col" id="nr"></td>
+                <td><img scope="col" id="imgProduit" height="" width="150"></img></td>
+                <td scope="col" id="nameProduit"></td>
+                <td scope="col" id="qt"></td>
+                <td scope="col" id="priceProduit"></td>
+                <td scope="col" id="sous_total"></td>
+                <td scope="col"><div><input id="button_delete" type="button" value="Supprimer l'article"></td>
               </tr>
-          </template>
+            </template>
           </tbody>
           <tfoot>
-            <tr>
-             <td id="totalLabel" colspan="4">Total : </td>
-             <td id="total" colspan="2"></td>
+            <tr class="table-dark">
+              <td id="totalLabel" colspan="5">Total : </td>
+              <td id="total" colspan="2"></td>
             </tr>
           </tfoot>
         </table>
@@ -93,53 +94,43 @@
 
       <div class="formulaire">
         <h3>Veuillez completez le formulaire avec l'adresse pour receptionne de votre commande</h3>
-    </div>
+      </div>
 
-    <form class="row g-3" action="recap_comande.html" novalidate>
+      <form class="row g-3" action="confirmation_comande.html" novalidate>
         <div class="col-md-4">
-            <label for="validationCustom01" class="form-label">Nom</label>
-            <input type="text" class="form-control" id="validationCustom01" required>
+          <label for="validationCustom01" class="form-label" aria-describedby="nomHelp">Nom</label>
+          <div id="nomHelp" class="form-text">Nous ne partagerons jamais votre nom avec qui que ce soit.</div>
+          <input type="text" class="form-control" id="validationCustom01" required>
         </div>
         <div class="col-md-4">
-            <label for="validationCustom02" class="form-label">Prenom</label>
-            <input type="text" class="form-control" id="validationCustom02" required>
+          <label for="validationCustom02" class="form-label" aria-describedby="prenomHelp">Prenom</label>
+          <div id="prenomHelp" class="form-text">Nous ne partagerons jamais votre prenom avec qui que ce soit.</div>
+          <input type="text" class="form-control" id="validationCustom02" required>
         </div>
         <div class="col-md-4">
-            <label for="validationCustomUsername3" class="form-label">Email</label>
-            <div class="input-group has-validation">
-                <span class="input-group-text" id="inputGroupPrepend">@</span>
-                <input type="text" class="form-control" 
-                    id="validationCustomUsername03" aria-describedby="inputGroupPrepend" required>
-            </div>
-        </div>
-        <div class="col-md-1">
-            <label for="validationCustom04" class="form-label">Nr</label>
-            <input type="text" class="form-control" id="validationCustom04" required>
+          <label for="validationCustomUsername3" class="form-label" aria-describedby="emailHelp">Email</label>
+          <div id="emailHelp" class="form-text">Veuillez entrer une adresse e-mail valide. Example: example@example.com </div>
+          <div class="input-group has-validation">
+            <span class="input-group-text" id="inputGroupPrepend">@</span>
+            <input type="text" class="form-control" id="validationCustomUsername03" aria-describedby="inputGroupPrepend"
+              required>
+          </div>
         </div>
         <div class="col-md-4">
-            <label for="validationCustom05" class="form-label">Rue</label>
-            <input type="text" class="form-control" id="validationCustom05" required>
+          <label for="validationCustom05" class="form-label" aria-describedby="adresseHelp">Adresse</label>
+          <div id="adresseHelp" class="form-text">Veuillez entrer une adresse e-mail valide. Example: 123 Rue Paris</div>
+          <input type="text" class="form-control" id="validationCustom05" required>
         </div>
         <div class="col-md-3">
-            <label for="validationCustom06" class="form-label">Ville</label>
-            <input type="text" class="form-control" id="validationCustom06" required>
+          <label for="validationCustom06" class="form-label" aria-describedby="villeHelp">Ville</label>
+          <div id="villeHelp" class="form-text">Veuillez entrer une ville valide </div>
+          <input type="text" class="form-control" id="validationCustom06" required>
         </div>
-        <div class="col-md-3">
-            <label for="validationCustom07" class="form-label">Code Postal</label>
-            <input type="text" class="form-control" id="validationCustom07" required>
+  
+        <div class="col-12 d-grid gap-2 d-md-flex justify-content-md-end">
+          <button class="btn btn-primary" type="submit">Passer la commande</button>
         </div>
-        <div class="col-12">
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
-                <label class="form-check-label" for="invalidCheck">
-                    Accepter les termes et conditions
-                </label>
-            </div>
-        </div>
-        <div class="col-12">
-            <button class="btn btn-primary" type="submit">Passer la commande</button>
-        </div>
-    </form>
+      </form>
 
     </main>
 
