mise en forme des pages

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -65,13 +65,16 @@
         <main class="content ">
             <div id="app">
                 <template id="template">
-                    <div class="col-sm-2 shadow-lg p-3 mb-5 bg-body ">
+                    <div class="container col-sm-2 shadow-lg p-3 mb-5 bg-body ">
+                        <div class="produit_notButton">
                         <div id="idProduit" style="display:none;"></div>
-                        <img id="imgProduit" src="" class="card-img-top rounded mx-auto d-block"></img>
-                        <h2 id="nameProduit"></h2>
-                        <h3 id="priceProduit"></h3>
+                        <img id="imgProduit" src="" class="card-img-top rounded mx-auto d-block img-fluid"></img>
+                        <p class="h6" id="nameProduit"></p>
+                        <p id="priceProduit"></p>
+                    </div>
+
                         <div class="card-body">
-                            <input id="bouton_info" type="button" class="btn btn-primary" value="Plus d'info">
+                            <input id="bouton_info" type="button" class="btn btn-primary rounded mx-auto d-block" value="Plus d'info">
                         </div>
                     </div>
                 </template>
